ggml/30/490eb65f08fd2d43695911d8a9f06ee7bb2a05/ggml-100-m1/ctest_debug.log
+ cmake -DCMAKE_BUILD_TYPE=Debug -DGGML_METAL=ON -DGGML_METAL_EMBED_LIBRARY=ON ..
-- The C compiler identification is AppleClang 15.0.0.15000100
-- The CXX compiler identification is AppleClang 15.0.0.15000100
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found Git: /usr/bin/git (found version "2.39.3 (Apple Git-145)") 
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- CMAKE_SYSTEM_PROCESSOR: arm64
-- ARM detected
-- Accelerate framework found
-- The ASM compiler identification is AppleClang
-- Found assembler: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/cc
CMake Warning (dev) at src/CMakeLists.txt:526 (install):
  Target ggml has RESOURCE files but no RESOURCE DESTINATION.
This warning is for project developers.  Use -Wno-dev to suppress it.

-- ARM detected
-- Accelerate framework found
-- Configuring done (5.7s)
-- Generating done (0.1s)
-- Build files have been written to: /Users/ggml/work/ggml/build-ci-debug

real	0m5.876s
user	0m0.418s
sys	0m0.458s
+ make -j
[  1%] Generate assembly for embedded Metal library
Embedding Metal library
[  1%] Building CXX object examples/CMakeFiles/common.dir/common.cpp.o
[  3%] Building C object src/CMakeFiles/ggml.dir/ggml-alloc.c.o
[  3%] Building C object src/CMakeFiles/ggml.dir/ggml-metal.m.o
[  4%] Building C object src/CMakeFiles/ggml.dir/ggml-backend.c.o
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml.c.o
[  6%] Building C object src/CMakeFiles/ggml.dir/ggml-quants.c.o
[  7%] Building ASM object src/CMakeFiles/ggml.dir/__/autogenerated/ggml-metal-embed.s.o
[  8%] Linking C shared library libggml.dylib
[  8%] Built target ggml
[  9%] Building C object tests/CMakeFiles/test1.dir/test1.c.o
[ 10%] Building C object tests/CMakeFiles/test-mul-mat2.dir/test-mul-mat2.c.o
[ 12%] Building C object tests/CMakeFiles/test3.dir/test3.c.o
[ 12%] Building CXX object tests/CMakeFiles/test-quantize-perf.dir/test-quantize-perf.cpp.o
[ 13%] Building C object tests/CMakeFiles/test0.dir/test0.c.o
[ 14%] Building C object tests/CMakeFiles/test2.dir/test2.c.o
[ 14%] Building CXX object examples/mnist/CMakeFiles/mnist-mtl.dir/main-mtl.cpp.o
[ 15%] Building CXX object tests/CMakeFiles/test-conv1d.dir/test-conv1d.cpp.o
[ 16%] Building CXX object tests/CMakeFiles/test-arange.dir/test-arange.cpp.o
[ 17%] Building C object tests/CMakeFiles/test-pool.dir/test-pool.c.o
[ 18%] Building CXX object tests/CMakeFiles/test-timestep_embedding.dir/test-timestep_embedding.cpp.o
[ 19%] Building C object examples/mnist/CMakeFiles/mnist-mtl.dir/main-mtl.m.o
[ 20%] Building C object tests/CMakeFiles/test-blas0.dir/test-blas0.c.o
[ 21%] Building C object tests/CMakeFiles/test-conv-transpose.dir/test-conv-transpose.c.o
[ 22%] Building CXX object tests/CMakeFiles/test-quantize-fns.dir/test-quantize-fns.cpp.o
[ 23%] Building CXX object examples/CMakeFiles/common-ggml.dir/common-ggml.cpp.o
[ 24%] Building C object tests/CMakeFiles/test-rel-pos.dir/test-rel-pos.c.o
[ 27%] Building CXX object tests/CMakeFiles/test-grad0.dir/test-grad0.cpp.o
[ 27%] Building CXX object tests/CMakeFiles/test-opt.dir/test-opt.cpp.o
[ 27%] Building C object tests/CMakeFiles/test-vec2.dir/test-vec2.c.o
[ 28%] Building CXX object examples/simple/CMakeFiles/simple-ctx.dir/simple-ctx.cpp.o
[ 29%] Building CXX object tests/CMakeFiles/test-backend-ops.dir/test-backend-ops.cpp.o
[ 30%] Building CXX object examples/mnist/CMakeFiles/mnist-cpu.dir/main-cpu.cpp.o
[ 31%] Building C object tests/CMakeFiles/test-mul-mat0.dir/test-mul-mat0.c.o
[ 32%] Building C object tests/CMakeFiles/test-dup.dir/test-dup.c.o
[ 33%] Building C object tests/CMakeFiles/test-customop.dir/test-customop.c.o
[ 34%] Building CXX object examples/whisper/CMakeFiles/whisper-cpp.dir/whisper.cpp.o
[ 35%] Building CXX object tests/CMakeFiles/test-conv2d.dir/test-conv2d.cpp.o
[ 36%] Building CXX object tests/CMakeFiles/test-mul-mat.dir/test-mul-mat.cpp.o
[ 37%] Building C object tests/CMakeFiles/test-xpos.dir/test-xpos.c.o
[ 38%] Building C object tests/CMakeFiles/test-mul-mat1.dir/test-mul-mat1.c.o
[ 39%] Building C object tests/CMakeFiles/test-vec0.dir/test-vec0.c.o
[ 41%] Building CXX object tests/CMakeFiles/test-backend-buffer.dir/test-backend-buffer.cpp.o
[ 41%] Building CXX object examples/simple/CMakeFiles/simple-backend.dir/simple-backend.cpp.o
/Users/ggml/work/ggml/tests/test-xpos.c:39:31: error: call to undeclared function 'ggml_rope_xpos_inplace'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    struct ggml_tensor * Qx = ggml_rope_xpos_inplace(ctx, Q, KQ_pos, n_embd_head, 512.0f, false);
                              ^
/Users/ggml/work/ggml/tests/test-xpos.c:39:31: note: did you mean 'ggml_rope_ext_inplace'?
/Users/ggml/work/ggml/src/../include/ggml/ggml.h:1502:35: note: 'ggml_rope_ext_inplace' declared here
    GGML_API struct ggml_tensor * ggml_rope_ext_inplace(
                                  ^
/Users/ggml/work/ggml/tests/test-xpos.c:39:26: warning: incompatible integer to pointer conversion initializing 'struct ggml_tensor *' with an expression of type 'int' [-Wint-conversion]
    struct ggml_tensor * Qx = ggml_rope_xpos_inplace(ctx, Q, KQ_pos, n_embd_head, 512.0f, false);
                         ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/ggml/work/ggml/tests/test-xpos.c:40:26: warning: incompatible integer to pointer conversion initializing 'struct ggml_tensor *' with an expression of type 'int' [-Wint-conversion]
    struct ggml_tensor * Kx = ggml_rope_xpos_inplace(ctx, K, KQ_pos, n_embd_head, 512.0f, true);
                         ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 warnings and 1 error generated.
make[2]: *** [tests/CMakeFiles/test-xpos.dir/test-xpos.c.o] Error 1
[ 42%] Linking C executable ../bin/test0
make[1]: *** [tests/CMakeFiles/test-xpos.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 43%] Linking C executable ../bin/test-dup
[ 44%] Linking C executable ../bin/test3
[ 45%] Linking C executable ../bin/test-vec0
[ 46%] Linking C executable ../bin/test-rel-pos
[ 46%] Linking C executable ../bin/test-customop
[ 47%] Linking CXX executable ../bin/test-opt
[ 48%] Linking C executable ../bin/test-conv-transpose
[ 49%] Linking C executable ../bin/test1
[ 49%] Linking C executable ../bin/test2
[ 50%] Linking CXX executable ../bin/test-arange
[ 50%] Linking CXX executable ../bin/test-backend-buffer
[ 51%] Linking C executable ../bin/test-pool
[ 52%] Linking C executable ../bin/test-mul-mat0
[ 53%] Linking C executable ../bin/test-vec2
[ 53%] Built target test1
[ 54%] Linking CXX executable ../bin/test-grad0
[ 54%] Built target test-conv-transpose
[ 54%] Built target test-customop
[ 54%] Built target test-opt
[ 54%] Built target test-dup
[ 54%] Built target test-rel-pos
[ 54%] Built target test0
[ 54%] Built target test-vec0
[ 54%] Built target test-backend-buffer
[ 54%] Built target test3
[ 54%] Built target test-arange
[ 54%] Built target test-pool
[ 54%] Built target test2
[ 54%] Linking C executable ../bin/test-mul-mat2
[ 54%] Built target test-mul-mat0
[ 54%] Built target test-vec2
[ 54%] Built target test-grad0
[ 54%] Built target test-mul-mat2
[ 55%] Linking CXX executable ../bin/test-quantize-fns
[ 55%] Linking CXX executable ../bin/test-timestep_embedding
[ 55%] Built target test-quantize-fns
[ 55%] Built target test-timestep_embedding
[ 56%] Linking CXX executable ../../bin/simple-ctx
[ 57%] Linking CXX executable ../../bin/simple-backend
[ 58%] Linking CXX executable ../bin/test-mul-mat
[ 59%] Linking CXX executable ../bin/test-conv1d
[ 60%] Linking C executable ../bin/test-blas0
[ 61%] Linking CXX executable ../../bin/mnist-mtl
[ 62%] Linking CXX executable ../../bin/mnist-cpu
[ 62%] Built target simple-ctx
[ 63%] Linking CXX executable ../bin/test-conv2d
[ 63%] Built target simple-backend
[ 64%] Linking C executable ../bin/test-mul-mat1
[ 64%] Built target test-mul-mat
[ 64%] Built target test-conv1d
[ 64%] Built target mnist-mtl
[ 64%] Built target test-blas0
[ 64%] Built target test-conv2d
[ 65%] Linking CXX static library libcommon.a
[ 65%] Built target mnist-cpu
[ 65%] Built target test-mul-mat1
[ 66%] Linking CXX executable ../bin/test-quantize-perf
[ 66%] Built target common
[ 66%] Built target test-quantize-perf
[ 67%] Linking CXX executable ../bin/test-backend-ops
[ 67%] Built target test-backend-ops
[ 68%] Linking CXX static library libcommon-ggml.a
[ 68%] Built target common-ggml
[ 69%] Linking CXX static library libwhisper-cpp.a
[ 69%] Built target whisper-cpp
make: *** [all] Error 2
